@@ -1,20 +1,26 @@
 package com.example.warehouse.handler;
 
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+
 import java.io.IOException;
 import java.io.OutputStream;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 
 public class HttpSensorHandler implements SensorHandler {
+    private static final Logger logger = LoggerFactory.getLogger(HttpSensorHandler.class);
+
     @Override
     public void handle(String message) {
-        System.out.println("Http Handler received: " + message);
+        logger.info("Http Handler received: {}", message);
         forwardToMonitoringService(message);
     }
 
     private void forwardToMonitoringService(String message) {
         try {
-            URL url = new URL("http://localhost:8080/api/sensor-data");
+            URL url = URI.create("http://localhost:8080/api/sensor-data").toURL();
             HttpURLConnection conn = (HttpURLConnection) url.openConnection();
             conn.setRequestMethod("POST");
             conn.setDoOutput(true);
@@ -25,7 +31,7 @@ public class HttpSensorHandler implements SensorHandler {
             }
             conn.getResponseCode();
         } catch (IOException e) {
-            e.printStackTrace();
+            logger.error(e.getMessage(), e);
         }
     }
 }
